@@ -1,3 +1,7 @@
+06/08/2015:
+	- Added timestamp check and metadata reload for images that have been modified
+
+
 03/08/2015:
 	- Added palette support for bilevel images to handle cases where LUTs are inverted
 
